--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,7 @@ android {
         vectorDrawables {
             useSupportLibrary true
         }
-
+        testInstrumentationRunner = "com.debduttapanda.idealapp.CustomTestRunner"
         javaCompileOptions {
             annotationProcessorOptions {
                 arguments += [
@@ -28,7 +28,6 @@ android {
                         "room.expandProjection":"true"]
             }
         }
-
 
     }
 
@@ -116,13 +115,14 @@ dependencies {
     //navigation animation
     implementation "com.google.accompanist:accompanist-navigation-animation:0.24.11-rc"
 
+    implementation 'androidx.test:monitor:1.5.0'
     // Hilt
-    implementation "com.google.dagger:hilt-android:2.42"
-    kapt "com.google.dagger:hilt-android-compiler:2.42"
+    implementation "com.google.dagger:hilt-android:$hilt_version"
+    kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
     //implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"//commented
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
     kapt "androidx.hilt:hilt-compiler:1.0.0"
-    implementation "com.google.dagger:hilt-android:2.42"
+    implementation "com.google.dagger:hilt-android:$hilt_version"
 
 
     def room_version = "2.4.3"
@@ -151,19 +151,26 @@ dependencies {
 
 
     // For Robolectric tests.
-    testImplementation 'com.google.dagger:hilt-android-testing:2.42'
+    testImplementation "com.google.dagger:hilt-android-testing:$hilt_version"
     // ...with Kotlin.
-    kaptTest 'com.google.dagger:hilt-android-compiler:2.42'
+    kaptTest "com.google.dagger:hilt-android-compiler:$hilt_version"
     // ...with Java.
-    testAnnotationProcessor 'com.google.dagger:hilt-android-compiler:2.42'
+    testAnnotationProcessor "com.google.dagger:hilt-android-compiler:$hilt_version"
 
 
     // For instrumented tests.
-    androidTestImplementation 'com.google.dagger:hilt-android-testing:2.42'
+    androidTestImplementation "com.google.dagger:hilt-android-testing:$hilt_version"
     // ...with Kotlin.
-    kaptAndroidTest 'com.google.dagger:hilt-android-compiler:2.42'
+    kaptAndroidTest "com.google.dagger:hilt-android-compiler:$hilt_version"
     // ...with Java.
-    androidTestAnnotationProcessor 'com.google.dagger:hilt-android-compiler:2.42'
+    androidTestAnnotationProcessor "com.google.dagger:hilt-android-compiler:$hilt_version"
 
-    androidTestImplementation "androidx.navigation:navigation-testing:2.5.1"
+    testImplementation "org.mockito.kotlin:mockito-kotlin:3.2.0"
+
+    debugImplementation "androidx.test:core:1.4.0"
+
+    def nav_version = "2.5.1"
+
+    androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
+
 }
