--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,17 @@
 buildscript {
     ext {
+        hilt_version = "2.42"
         compose_version = '1.2.0'
     }
     dependencies {
-        classpath "com.google.dagger:hilt-android-gradle-plugin:2.42"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.2.1' apply false
     id 'com.android.library' version '7.2.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.0' apply false
-    id 'org.jetbrains.kotlin.jvm' version '1.6.21' apply false
+    id 'org.jetbrains.kotlin.jvm' version '1.7.0' apply false
 }
 
 task clean(type: Delete) {
