--- a/app/build.gradle
+++ b/app/build.gradle
@@ -167,10 +167,23 @@ dependencies {
 
     testImplementation "org.mockito.kotlin:mockito-kotlin:3.2.0"
 
+    testImplementation 'org.mockito:mockito-core:4.3.1'
+    testImplementation 'org.mockito:mockito-inline:2.13.0'
+
     debugImplementation "androidx.test:core:1.4.0"
 
     def nav_version = "2.5.1"
 
     androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
+
+    testImplementation 'org.hamcrest:hamcrest:2.2'
+
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
+
+    testImplementation "io.mockk:mockk:1.12.7"
+    testImplementation "io.mockk:mockk-agent-jvm:1.12.7"
+
+    androidTestImplementation "io.mockk:mockk-android:1.12.7"
+    androidTestImplementation "io.mockk:mockk-agent-jvm:1.12.7"
 
 }
