--- a/core/build.gradle
+++ b/core/build.gradle
@@ -44,4 +44,11 @@ dependencies {
     implementation "com.google.dagger:hilt-android:2.42"
     kapt "com.google.dagger:hilt-android-compiler:2.42"
     kapt "androidx.hilt:hilt-compiler:1.0.0"
+
+    testImplementation "org.mockito.kotlin:mockito-kotlin:3.2.0"
+
+    testImplementation 'org.mockito:mockito-core:4.3.1'
+    testImplementation 'org.mockito:mockito-inline:2.13.0'
+
+    testImplementation 'org.hamcrest:hamcrest:2.2'
 }
